--- a/Html-Css/Bt/Buoi3/style.css
+++ b/Html-Css/Bt/Buoi3/style.css
@@ -1,67 +1,74 @@
-p{
-    text-align:center;
-    font-size:18px;
+p {
+  text-align: center;
+  font-size: 18px;
 }
-#MauDo{
-    background-color:red;
-    height: 200px;
-    width: 60%;
-}
-
-#Xanhla{
-    background-color:green;
-    height: 100px;
+#MauDo {
+  background-color: red;
+  height: 200px;
+  width: 60%;
 }
 
-#XanhDuong{
-    background-color:blue;
-    height: 100px;
+#Xanhla {
+  background-color: green;
+  height: 100px;
 }
 
-#XanhDo{
-    width:40%;
+#XanhDuong {
+  background-color: blue;
+  height: 100px;
+}
+
+#XanhDo {
+  width: 40%;
+}
+
+.CanGiua{
+    font-size:30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Hinh 1 */
-.BaiDau{
-    display: flex;
+.BaiDau {
+  display: flex;
 }
 
 /* Hinh 2 */
-.BaiHai{
-    display: flex;
+.BaiHai {
+  display: flex;
 }
-.Do2{
-    margin-right:15px
+.Do2 {
+  margin-right: 15px;
 }
 
 /* Hinh 3 */
-#MauDo2{
-    height: 200px;
-    width: 32.5%;
-    background-color: red;
+#MauDo2 {
+  height: 200px;
+  width: 32.5%;
+  background-color: red;
 }
 
-#XanhLa2{
-    height: 200px;
-    width: 32.5%;
-    background-color: green;
+#XanhLa2 {
+  height: 200px;
+  width: 32.5%;
+  background-color: green;
 }
 
-#XanhDuong2{
-    height: 200px;
-    width: 32.5%;
-    background-color:blue;
+#XanhDuong2 {
+  height: 200px;
+  width: 32.5%;
+  background-color: blue;
 }
 
-.BaiBa{
-    display: flex;
+.BaiBa {
+  display: flex;
 }
 
 /* Hinh 4 */
-.BaiBon{
-    display: flex;
-    justify-content: space-between; 
+.BaiBon {
+  display: flex;
+  justify-content: space-between;
 }
 
 /* .Do3{
