--- a/Html-Css/Bt/Buoi4/style.css
+++ b/Html-Css/Bt/Buoi4/style.css
@@ -101,6 +101,7 @@
 
 #GioiThieu {
   width: 100%;
+  height: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
@@ -168,6 +169,10 @@
   padding-right: 25px;
   padding-left: 25px;
   padding-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #GioiThieu {
