--- a/SpringBoot/BT/Buoi4/bookstore/src/main/resources/templates/index.html
+++ b/SpringBoot/BT/Buoi4/bookstore/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <li><a href="/update">update book</a></li>
     <li><a href="/delete">delete book</a></li>
     <li><a href="/deletebyid">delete by id</a></li>
+    <li><a href="/searchTitle">searchTitle</a></li>
 </ul>
 </body>
 </html>
