--- a/SpringBoot/BT/Buoi8/src/main/resources/templates/form.html
+++ b/SpringBoot/BT/Buoi8/src/main/resources/templates/form.html
@@ -10,8 +10,7 @@
 
         <h1 style="text-align:center">Ứng tuyển thư ký</h1>
 
-        <form action="#" th:action="@{/save}" th:object="${employee}" method="post" novalidate="novalidate"
-              enctype="multipart/form-data">
+        <form action="#" th:action="@{/save}" th:object="${employee}" method="post" enctype="multipart/form-data" novalidate="novalidate">
             <div class="form-group row">
                 <label class=" col-form-label">ID</label>
                 <div class="col-sm-4">
