--- a/Mobile/TodoList/app/src/main/res/layout/activity_event_edit.xml
+++ b/Mobile/TodoList/app/src/main/res/layout/activity_event_edit.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:text="Date Create"
+            android:text="Date"
             android:textSize="20sp"
             android:textAlignment="center"
             android:textColor="@color/black"/>
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:text="Time Create"
+            android:text="Time"
             android:textSize="20sp"
             android:textAlignment="center"
             android:textColor="@color/black" />
@@ -65,6 +65,7 @@
             android:textStyle="bold" />
 
     <Button
+            android:id="@+id/saveEventAction"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -72,8 +73,8 @@
             android:textColor="@color/lightBlue"
             android:backgroundTint="@color/aliceBlue"
             android:textStyle="bold"
-            android:onClick="saveEventAction"
+
             android:layout_gravity="center"
             android:textSize="20sp" />
-
+<!--    android:onClick="saveEventAction"-->
 </LinearLayout>
